--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,7 +47,7 @@ FROM php:8.1-apache
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # No need to build it again, just copy it.
-COPY --chown www-data:www-data --from=script-builder /var/www /var/www
+COPY --chown=www-data:www-data --from=script-builder /var/www /var/www
 
 # Environment used for the database.
 ENV USERNAME=username \
