--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -106,7 +106,9 @@ RUN { \
 RUN sed -i "s|/var/www/html|$APACHE_DOCUMENT_ROOT|" /etc/apache2/sites-available/000-default.conf \
     && sed -i "s|*:80>|*:8080>|" /etc/apache2/sites-available/000-default.conf \
     && sed -i "1Listen 8080\n" /etc/apache2/ports.conf \
-    && a2enmod rewrite remoteip \
+RUN more /etc/apache2/ports.conf
+RUN more /etc/apache2/sites-available/000-default.conf
+RUN a2enmod rewrite remoteip \
     && rm -rf /var/www/html \
     && chown -Rf www-data:www-data /var/www/web
 
